--- a/app/elements/common/login/login-page-password/login-page-password.html
+++ b/app/elements/common/login/login-page-password/login-page-password.html
@@ -33,8 +33,6 @@ paper-material > div:first-child {
 	max-height: 248px;
 	padding: 10%;
 	padding-bottom: 0;
-	background: #373b50;
-	color: white;
 
 	@apply(--layout-horizontal);
 	@apply(--layout-center);
@@ -44,8 +42,6 @@ paper-material > div.email {
 	height: auto;
 	padding: 0;
 	padding-bottom: 5%;
-	background: #373b50;
-	color: white;
 
 	@apply(--layout-horizontal);
 	@apply(--layout-center);
@@ -56,6 +52,18 @@ paper-material > div:first-child > div {
 
 	@apply(--layout-vertical);
 	@apply(--layout-center);
+}
+
+
+paper-material > div:first-child > div > img {
+	width: auto;
+	height: auto;
+	max-height: 50%;
+	max-width: 50%;
+}
+
+paper-material > div:nth-child(2) {
+	text-align: center;
 }
 
 paper-material > div.email > div {
@@ -84,12 +92,12 @@ paper-icon-button {
 			<div>
 				<paper-icon-button flat icon="chevron-left" on-click="prev"></paper-icon-button>
 				<div>
-					<iron-icon class="huge" icon="account-circle"></iron-icon>
+					<img src="/images/logo.svg" />
 				</div>
 			</div>
 			<div class="email">
 				<div>
-					<p>{{email}}</p>
+					<p>Welcome, <span>{{email}}</span>!</p>
 				</div>
 			</div>
 			<div>
