--- a/app/index.html
+++ b/app/index.html
@@ -13,13 +13,13 @@
 	<link rel="icon" href="images/logo.svg" type="image/svg+xml" />
 
 	<!-- Chrome for Android theme color -->
-	<meta name="theme-color" content="#2b2661">
+	<meta name="theme-color" content="#e5e5e5">
 
 	<!-- Web Application Manifest -->
 	<link rel="manifest" href="manifest.json">
 
 	<!-- Tile color for Win8 -->
-	<meta name="msapplication-TileColor" content="#2b2661">
+	<meta name="msapplication-TileColor" content="#e5e5e5">
 
 	<!-- Add to homescreen for Chrome on Android -->
 	<meta name="mobile-web-app-capable" content="yes">
