Fix redirect to /

--- a/app/elements/app-nav.html
+++ b/app/elements/app-nav.html
@@ -114,8 +114,7 @@
 					value: false
 				},
 				lastOrganization: {
-					type: Object,
-					value: 'not-defined'
+					type: Object
 				}
 			},
 			startLoading: function(){
@@ -154,7 +153,7 @@
 				}
 				this._setLoginAsMenuSelectedIndex(index);
 				this.refresh();
-				if(this.lastOrganization !== 'not-defined' && this.lastOrganization !== this.user.activeOrganization){
+				if(this.lastOrganization !== undefined && this.lastOrganization !== this.user.activeOrganization){
 					page('/');
 				}
 				this.lastOrganization = this.user.activeOrganization;
