--- a/app/elements/admin/import-catcoder-input.html
+++ b/app/elements/admin/import-catcoder-input.html
@@ -32,7 +32,7 @@
 				body.append('file', file, file.name);
 				body.append('organization', localStorage.activeOrganization);
 				this.$.postGame.body = body;
-				this.$.postGame.url = util.build("/contestuploadzip");
+				this.$.postGame.url = util.build('/contestgameupload');
 				this.$.postGame.generateRequest();
 				app.startLoading();
 				this.$.uploadButton.disabled = true;
