--- a/app/elements/coder/challenge/tasks/endpoints/ccc-io-task.html
+++ b/app/elements/coder/challenge/tasks/endpoints/ccc-io-task.html
@@ -10,64 +10,64 @@
 <link rel="import" href="/bower_components/iron-icons/av-icons.html">
 <link rel="import" href="/bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 
-<dom-module id="ccc-drone-task">
-<style include="iron-flex">
-	:host{
-		display: block;
-		height: 100%;
-		--paper-tabs-selection-bar-color: #87CEFA;
-		--paper-tab-ink: #87CEFA;
-	}
-	.header{
-		background: white;
-		color: black;
-		height: 50px;
-		width: calc(100% - 24px);
-		box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
-	}
-	.right {
-		margin: 16px 16px 8px 8px;
-		width: calc(100% - 24px);
-	}
-	.left {
-		margin: 16px 8px 16px 16px;
-		width: calc(100% - 24px);
-	}
-	#componentWrapper{
-		height: 100%;
-		@apply(--layout-horizontal);
-	}
-	#componentWrapper>div{
-		height: 100%;
-	}
-	paper-material{
-		width: 100%;
-		margin: auto;
-		background: white;
-	}
-	#leftCard{
-		margin: 16px 8px 16px 16px;
-		width: calc(100% - 24px);
-		height: calc(100% - 98px);
-	}
-	#rightCard{
-		margin: 16px 16px 16px 8px;
-		width: calc(100% - 24px);
-		height: calc(100% - 98px);
-	}
-	#inputViewRightCard {
-		margin: 8px 16px 16px 8px;
-		width: calc(100% - 24px);
-		height: calc(100% - 98px);
-	}
-	.halfScreen {
-		width: 50%;
-	}
+<dom-module id="ccc-io-task">
+	<style include="iron-flex">
+		:host{
+			display: block;
+			height: 100%;
+			--paper-tabs-selection-bar-color: #87CEFA;
+			--paper-tab-ink: #87CEFA;
+		}
+		.header{
+			background: white;
+			color: black;
+			height: 50px;
+			width: calc(100% - 24px);
+			box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+		}
+		.right {
+			margin: 16px 16px 8px 8px;
+			width: calc(100% - 24px);
+		}
+		.left {
+			margin: 16px 8px 16px 16px;
+			width: calc(100% - 24px);
+		}
+		#componentWrapper{
+			height: 100%;
+			@apply(--layout-horizontal);
+		}
+		#componentWrapper>div{
+			height: 100%;
+		}
+		paper-material{
+			width: 100%;
+			margin: auto;
+			background: white;
+		}
+		#leftCard{
+			margin: 16px 8px 16px 16px;
+			width: calc(100% - 24px);
+			height: calc(100% - 98px);
+		}
+		#rightCard{
+			margin: 16px 16px 16px 8px;
+			width: calc(100% - 24px);
+			height: calc(100% - 32px);
+		}
+		#inputViewRightCard {
+			margin: 8px 16px 16px 8px;
+			width: calc(100% - 24px);
+			height: calc(100% - 98px);
+		}
+		.halfScreen {
+			width: 50%;
+		}
 
-	#leftPages {
-		height: calc(100% - 50px);
-	}
-</style>
+		#leftPages {
+			height: calc(100% - 50px);
+		}
+	</style>
 	<template>
 		<div id="componentWrapper">
 			<div class="halfScreen">
@@ -84,26 +84,15 @@
 				</paper-material>
 			</div>
 			<div class="halfScreen">
-				<paper-tabs selected="{{selected}}" align-bottom="true" no-ink="true" class="header right">
-					<paper-tab>Upload solution file</paper-tab>
-					<paper-tab>Code editor view</paper-tab>
-				</paper-tabs>
-				<template is="dom-if" if="{{inputView}}">
-					<paper-material id="inputViewRightCard" elevation="1">
-						<input-view id="inputView" task="{{task}}"></input-view>
-					</paper-material>
-				</template>
-				<template is="dom-if" if="{{!inputView}}">
-					<paper-material id="rightCard" elevation="1">
-						<code-editor-with-actions id="codeEditor" task="{{task}}" language="{{language.value}}" show-download></code-editor-with-actions>
-					</paper-material>
-				</template>
+				<paper-material id="rightCard" elevation="1">
+					<code-editor-with-actions id="codeEditor" task="{{task}}" language="{{language.value}}"></code-editor-with-actions>
+				</paper-material>
 			</div>
 		</div>
 	</template>
 	<script>
 		Polymer({
-			is: 'ccc-drone-task',
+			is: 'ccc-io-task',
 			properties: {
 				task: {
 					type: Object,
@@ -118,11 +107,6 @@
 					type: Number,
 					notify: true,
 					observer: '_selectedChanged'
-				},
-				inputView: {
-					type: Boolean,
-					notify: true,
-					value: false
 				},
 				leftTab: {
 					type: Number,
@@ -145,16 +129,6 @@
 			},
 			_startLoading: function(){
 				this.$$('#console').startLoading();
-			},
-			_selectedChanged: function(){
-				switch(this.selected){
-					case 0:
-						this.inputView = true;
-						return;
-					case 1:
-						this.inputView = false;
-						return;
-				}
 			},
 			_selectedLeftTabChanged: function(){
 				switch (this.leftTab){
