--- a/app/elements/coder/code-editor/code-editor-with-actions.html
+++ b/app/elements/coder/code-editor/code-editor-with-actions.html
@@ -74,7 +74,9 @@
 			<code-editor id="codeEditor" task-id="{{task.id}}" language="{{language}}" on-code-changed="_setCachedCode"></code-editor>
 			<div id="actions">
 				<paper-fab mini on-click="_goToInstructions" icon="chrome-reader-mode"></paper-fab>
-				<paper-fab mini on-click="_download" icon="file-download"></paper-fab>
+				<template is="dom-if" if="{{showDownload}}">
+					<paper-fab mini on-click="_download" icon="file-download"></paper-fab>
+				</template>
 				<paper-fab mini on-click="_addFile" icon="file-upload"></paper-fab>
 				<paper-fab mini on-click="submit" icon="av:play-arrow"></paper-fab>
 			</div>
