Link logo to company page (#249)

--- a/app/elements/app-nav.html
+++ b/app/elements/app-nav.html
@@ -32,7 +32,7 @@
 		<template is="dom-if" if="{{isLoggedIn}}">
 			<paper-material elevation="1">
 			<paper-toolbar class="higher">
-				<iron-icon src="/images/logo.svg" class="big"></iron-icon>
+				<a href="https://cod.uno/" target="_blank"><iron-icon src="/images/logo.svg" class="big"></iron-icon></a>
 				<div class="flex">
 					<paper-tabs id="bottomTabs" class="bottom indent" selected="{{selected}}" noink no-slide>
 						<span></span>
