No more hashbang (#250)

--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -153,7 +153,7 @@ window.addEventListener('WebComponentsReady', function() {
 	});
 
 	page({
-		hashbang: true
+		hashbang: false
 	});
 });
 </script>
