--- a/app/elements/company/challenge/challenge-list.html
+++ b/app/elements/company/challenge/challenge-list.html
@@ -69,7 +69,7 @@
 				}
 			},
 			_viewDetail: function(e){
-				page('/challenges/' + e.model.__data__.item.id);
+				page('/challenges/' + e.model.__data__.item.canonicalName);
 			}
 		});
 	</script>
