--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -72,6 +72,9 @@
 <link rel="import" href="common/error/error-page.html">
 
 <link rel="import" href="common/data-providers/challenge/challenges-provider.html"/>
+<link rel="import" href="common/data-providers/challenge/challenge-by-canonical-name-provider.html"/>
+<link rel="import" href="common/data-providers/challenge/invitation/invitations-by-challenge-canonical-name-provider.html"/>
+<link rel="import" href="common/data-providers/challenge/template/challenge-template-by-challenge-canonical-name-provider.html"/>
 <link rel="import" href="common/data-providers/endpoint/endpoints-provider.html">
 <link rel="import" href="common/data-providers/language/languages-provider.html">
 <link rel="import" href="common/data-providers/runner/runners-provider.html">
@@ -124,6 +127,7 @@
 <link rel="import" href="company/challenge/challenge-create.html">
 <link rel="import" href="company/challenge/challenge-detail.html">
 <link rel="import" href="company/challenge/challenge-list.html">
+<link rel="import" href="company/challenge/invited-users-table.html">
 
 <link rel="import" href="company/challenge-template/challenge-template-card.html">
 <link rel="import" href="company/challenge-template/challenge-template-detail.html">
