--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -74,11 +74,14 @@
 <link rel="import" href="common/data-providers/challenge/challenges-provider.html"/>
 <link rel="import" href="common/data-providers/challenge/challenge-by-canonical-name-provider.html"/>
 <link rel="import" href="common/data-providers/challenge/invitation/invitations-by-challenge-canonical-name-provider.html"/>
+<link rel="import" href="common/data-providers/challenge/template/challenge-templates-for-active-organization-provider.html"/>
 <link rel="import" href="common/data-providers/challenge/template/challenge-template-by-challenge-canonical-name-provider.html"/>
+<link rel="import" href="common/data-providers/challenge/template/challenge-template-by-id-provider.html"/>
 <link rel="import" href="common/data-providers/endpoint/endpoints-provider.html">
 <link rel="import" href="common/data-providers/language/languages-provider.html">
 <link rel="import" href="common/data-providers/runner/runners-provider.html">
 <link rel="import" href="common/data-providers/user/user-by-username-provider.html">
+<link rel="import" href="common/data-providers/task/task-by-id-provider.html">
 <link rel="import" href="common/data-providers/task/tasks-for-active-organization-provider.html">
 <link rel="import" href="common/data-providers/task/tasks-for-challenge-template-provider.html">
 <link rel="import" href="common/data-providers/task/tasks-provider.html">
@@ -103,13 +106,9 @@
 
 <link rel="import" href="common/register/register-page.html">
 
-<link rel="import" href="common/services/challenge-service.html">
-<link rel="import" href="common/services/challenge-template-service.html">
 <link rel="import" href="common/services/cookie-service.html">
-<link rel="import" href="common/services/endpoint-service.html">
 <link rel="import" href="common/services/invitation-service.html">
 <link rel="import" href="common/services/result-service.html">
-<link rel="import" href="common/services/runner-service.html">
 <link rel="import" href="common/services/user-service.html">
 <link rel="import" href="common/services/user-submission-service.html">
 <link rel="import" href="common/services/task-service.html">
