--- a/app/elements/company/challenge/invited-users-table.html
+++ b/app/elements/company/challenge/invited-users-table.html
@@ -1,5 +1,5 @@
-<link rel="import" href="../../../../bower_components/vaadin-grid/vaadin-grid.html">
-<link rel="import" href="../../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
+<link rel="import" href="../../../bower_components/vaadin-grid/vaadin-grid.html">
+<link rel="import" href="../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 
 <dom-module id="invited-users-table">
 	<style include="iron-flex">
