Display participants on contest page (#256)

--- a/app/elements/company/challenge/challenge-detail.html
+++ b/app/elements/company/challenge/challenge-detail.html
@@ -56,6 +56,10 @@
 				<invited-users-table challenge="[[canonicalName]]"></invited-users-table>
 			</paper-material>
 			<paper-material class="card">
+				<h3>Participants</h3>
+				<participants-table challenge="[[canonicalName]]"></participants-table>
+			</paper-material>
+			<paper-material class="card">
 				<h3>Leaderboard</h3>
 				<challenge-leaderboard challenge-id="{{challenge.id}}"></challenge-leaderboard>
 			</paper-material>
