--- a/app/elements/company/challenge/participants-table.html
+++ b/app/elements/company/challenge/participants-table.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../../../bower_components/vaadin-grid/vaadin-grid.html">
 <link rel="import" href="../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 
-<dom-module id="invited-users-table">
+<dom-module id="participants-table">
 	<style include="iron-flex">
 		:host {
 			display: block;
@@ -12,51 +12,43 @@
 		}
 	</style>
 	<template>
-		<invitations-by-challenge-canonical-name-provider canonical-name="[[challenge]]" data="{{invitations}}"></invitations-by-challenge-canonical-name-provider>
-		<vaadin-grid id="invitationsGrid" class="fullHeight" items="[[challenges]]" on-selected-items-changed="_selectedItemsChanged">
+		<participants-by-challenge-canonical-name-provider canonical-name="[[challenge]]" data="{{participants}}"></participants-by-challenge-canonical-name-provider>
+		<vaadin-grid id="participantsGrid" class="fullHeight" items="[[participants]]" on-selected-items-changed="_selectedItemsChanged">
 			<table>
 				<thead>
 					<tr>
 						<th>Username</th>
-						<th>Email</th>
-						<th>Token</th>
-						<th>Started</th>
-						<th>Expire</th>
+						<th>Team</th>
 					</tr>
 				</thead>
 				<colgroup>
-					<col name="username"/>
-					<col name="token"/>
-					<col name="email"/>
-					<col name="started"/>
-					<col name="expire"/>
+					<col name="user.username"/>
+					<col name="team.name"/>
 				</colgroup>
 			</table>
 		</vaadin-grid>
 	</template>
 	<script>
 		Polymer({
-			is: 'invited-users-table',
+			is: 'participants-table',
 			properties: {
 				isAdmin: {
 					value: true
 				}
 			},
 			observers: [
-				'_dataChanged(invitations)'
+				'_dataChanged(participants)'
 			],
 			_selectedItemsChanged: function(){
-				var selected = this.$.invitationsGrid.selection.selected();
+				var selected = this.$.participantsGrid.selection.selected();
 				if(!this.clickedOnOption && !!selected && selected.length > 0){
-					var invitation = this.invitations[selected[0]];
-					page('/u/' + invitation.username);
+					var participation = this.participants[selected[0]];
+					page('/u/' + participation.user.username);
 				}
 			},
 			_dataChanged: function(){
 				var element = this;
-				this.$.invitationsGrid.columns[3].renderer = element._formatDate;
-				this.$.invitationsGrid.columns[4].renderer = element._formatDate;
-				this.$.invitationsGrid.refreshItems();
+				this.$.participantsGrid.columns[2].renderer = element._formatDate;
 			},
 			_formatDate: function(cell){
 				if(!cell.data){
