--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -74,6 +74,7 @@
 <link rel="import" href="common/data-providers/challenge/challenges-provider.html"/>
 <link rel="import" href="common/data-providers/challenge/challenge-by-canonical-name-provider.html"/>
 <link rel="import" href="common/data-providers/challenge/invitation/invitations-by-challenge-canonical-name-provider.html"/>
+<link rel="import" href="common/data-providers/challenge/participation/participants-by-challenge-canonical-name-provider.html"/>
 <link rel="import" href="common/data-providers/challenge/template/challenge-templates-for-active-organization-provider.html"/>
 <link rel="import" href="common/data-providers/challenge/template/challenge-template-by-challenge-canonical-name-provider.html"/>
 <link rel="import" href="common/data-providers/challenge/template/challenge-template-by-id-provider.html"/>
@@ -127,6 +128,7 @@
 <link rel="import" href="company/challenge/challenge-detail.html">
 <link rel="import" href="company/challenge/challenge-list.html">
 <link rel="import" href="company/challenge/invited-users-table.html">
+<link rel="import" href="company/challenge/participants-table.html">
 
 <link rel="import" href="company/challenge-template/challenge-template-card.html">
 <link rel="import" href="company/challenge-template/challenge-template-detail.html">
