--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -31,6 +31,8 @@
 <link rel="import" href="coder/challenge/available/available-challenges-table.html">
 <link rel="import" href="coder/challenge/available/register-to-challenge-dialog.html">
 
+<link rel="import" href="coder/challenge/info/challenge-info-page.html">
+
 <link rel="import" href="coder/challenge/page/challenge-display.html">
 <link rel="import" href="coder/challenge/page/challenge-page.html">
 <link rel="import" href="coder/challenge/page/challenge-nav.html">
@@ -73,6 +75,7 @@
 
 <link rel="import" href="common/data-providers/challenge/challenges-provider.html"/>
 <link rel="import" href="common/data-providers/challenge/challenge-by-canonical-name-provider.html"/>
+<link rel="import" href="common/data-providers/challenge/user-status-for-challenge-provider.html"/>
 <link rel="import" href="common/data-providers/challenge/invitation/invitations-by-challenge-canonical-name-provider.html"/>
 <link rel="import" href="common/data-providers/challenge/participation/participants-by-challenge-canonical-name-provider.html"/>
 <link rel="import" href="common/data-providers/challenge/template/challenge-templates-for-active-organization-provider.html"/>
